--- a/index.html
+++ b/index.html
@@ -1,19 +1,54 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-    <head>
-        <meta charset="utf-8">
-        <title>HistoHK</title>
-        <link rel="stylesheet" href="css/bootstrap.min.css">
-        <link rel="stylesheet" href="css/style.css">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <title>Prototype testing</title>
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <!-- <link rel="stylesheet" href="css/aos.min.css"> -->
+    <!-- <link rel="stylesheet" href="css/hamburgers/hamburgers.min.css"> -->
 
-    </head>
+    <link rel="stylesheet" href="css/style.css">
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/lozad/dist/lozad.min.js"></script>
+
+  </head>
     <body>
-        <div>
-            <!-- <iframe src="https://marvelapp.com/prototype/5bje0c4?emb=1&iosapp=false&frameless=false" width="375" height="715" allowTransparency="false" frameborder="0"></iframe> -->
-            <!-- <iframe style="transform: scale(0.8)" width="442" height="935" src="https://invis.io/TMY7ECYF6ZX" frameborder="0" allowfullscreen></iframe> -->
-            <iframe style="transform: scale(0.9)" width="442" height="935" src="https://invis.io/TMY7ECYF6ZX" frameborder="0" allowfullscreen></iframe>
+      <div class="partOne mx-sm-auto mx-0 col-lg-8 col-12px-0 text-center">
+        <h1 class="mb-0 mt-4 col-lg-12 text-center ">Part 1. Prototype testing</h1>
+        <div class="box">
+          <div class="item" contenteditable>
+            <iframe style="transform: scale(0.9)" width="442" height="880" src="https://invis.io/TMY7ECYF6ZX" frameborder="0" allowfullscreen></iframe>          
+          </div>
         </div>  
-    
+      </div>
 
-    </body>
-</html> 
+      <div class="partTwo mx-sm-auto mx-0 col-lg-12 col-12px-0  text-center">
+        <h1 class="mb-0 mt-4 text-center ">Part 2. AR Visualisation</h1>
+        <h4 class="mt-4 mb-4 text-center"></h4>
+        <div class = "age-wrapper">
+          <video width="440" autoplay="false" loop="false" muted="" class="lozad">
+            <source data-src="images/histohk_demo.mp4" type="video/mp4">
+          Your browser does not support the video tag.
+          </video>
+        </div>
+      </div>
+
+      <div class="partThree mx-sm-auto mx-0 col-lg-8 col-12px-0 text-center">
+        <h1 class="mb-0 mt-4 col-lg-12 text-center ">Part 3. Historical contents</h1>
+        <div class="box">
+          <div class="item" contenteditable>
+            <iframe style="transform: scale(0.9)" width="442" height="935" src="https://invis.io/TMY7ECYF6ZX" frameborder="0" allowfullscreen></iframe>          
+          </div>
+        </div>  
+      </div>
+
+
+
+
+  <script src="js/scripts-all.js"></script>
+  <script src="js/main.js"></script>
+  <script src="js/backtotop.js"></script>
+  <script src="js/lozad.js"></script>
+
+  </body>
+</html>
