--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
       <div class="partOne mx-sm-auto mx-0 col-lg-8 col-12px-0 text-center">
         <h1 class="mb-0 mt-4 col-lg-12 text-center ">Part 1. Prototype testing</h1>
         <div class="box">
-          <div class="item" contenteditable>
+          <!-- <div class="item" contenteditable> -->
             <iframe style="transform: scale(0.9)" width="442" height="880" src="https://invis.io/TMY7ECYF6ZX" frameborder="0" allowfullscreen></iframe>          
-          </div>
+          <!-- </div> -->
         </div>  
       </div>
 
@@ -36,9 +36,9 @@
       <div class="partThree mx-sm-auto mx-0 col-lg-8 col-12px-0 text-center">
         <h1 class="mb-0 mt-4 col-lg-12 text-center ">Part 3. Historical contents</h1>
         <div class="box">
-          <div class="item" contenteditable>
+          <!-- <div class="item" contenteditable> -->
             <iframe style="transform: scale(0.9)" width="442" height="935" src="https://invis.io/PHYA0EFZ3N5" frameborder="0" allowfullscreen></iframe>          
-          </div>
+          <!-- </div> -->
         </div>  
       </div>
 
